SalesforceMetaData/metadata/objects/bofc__BOFCErrorLogs__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Decimal_Places__c</fullName>
        <label>Decimal Places</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Desc__c</fullName>
        <label>Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Display_Format__c</fullName>
        <label>Display Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Error_Desc__c</fullName>
        <label>Field Error Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Field_Status__c</fullName>
        <label>Field Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Formula_Details__c</fullName>
        <label>Formula Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__HelpText__c</fullName>
        <label>HelpText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Sorted__c</fullName>
        <label>Picklist Sorted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Val__c</fullName>
        <label>Picklist Val</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Values__c</fullName>
        <label>Picklist Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Related_To_Parent_Object__c</fullName>
        <label>Related To (Parent Object)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Required__c</fullName>
        <label>Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Starting_Number__c</fullName>
        <label>Starting Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Track_Field_History__c</fullName>
        <label>Track Field History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Visible_Lines__c</fullName>
        <label>Visible Lines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCErrorLogs</label>
    <nameField>
        <label>BOFCErrorLogs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>